# pet-platform

./: .gitattributes  .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  API_ENDPOINT_CATALOG.md  BACKEND_FRONTEND_INTEGRATION_CONTRACT.md  BACKEND_SYSTEM_MAP.md  Dockerfile  FINAL_ENGINEERING_HANDOFF.md  GATE_B0_HANDOFF.md  GATE_B1_PROGRESS.md  GATE_B2_PROGRESS.md  GATE_B3_PROGRESS.md  GATE_B4_PROGRESS.md  GATE_B5_PROGRESS.md  GATE_B6_PROGRESS.md  GATE_B7_PROGRESS.md  GATE_B8_PROGRESS.md  GATE_B9_PROGRESS.md  GATE_H1_PROGRESS.md  GATE_H2_PROGRESS.md  GATE_K1_PROGRESS.md  GATE_K2_PROGRESS.md  GATE_K3_PROGRESS.md  GATE_K4_PROGRESS.md  GATE_K5_PROGRESS.md  GATE_K6_PROGRESS.md  GATE_K7_PROGRESS.md  GATE_K8_PROGRESS.md  GATE_K9_PROGRESS.md  K9_CHANGED_FILE_MANIFEST.md  PACKAGE_MANIFEST.md  README.md  alembic.ini  backend-gate-k9-frontend-integration-instructions.md  compose.production.yml  docker-compose.yml  openapi.json  pet_platform_product_decision_record.md  pyproject.toml  release-contract.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  contracts.py  cursor.py  dependencies.py  errors.py  middleware.py  pagination.py  router.py
backend/app/cli/: __init__.py  bootstrap_operator.py  export_openapi.py  import_royal_canin_catalog.py  seed_launch.py  validate_knowledge_package.py  verify_release_contract.py
backend/app/common/: __init__.py  money.py  phone.py  time.py
backend/app/core/: __init__.py  config.py  logging.py  metrics.py  policies.py  rate_limit.py  redis.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/docs/: gap-closure-program-continuation-handoff.md  gap-closure-program-final-handoff.md
backend/migrations/: README  env.py
backend/scripts/: load_test.py
(+665 files in other folders)
