[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pet-platform-backend"
version = "0.1.0"
description = "Iran-first pet platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<6",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --ignore=tests/unit/test_price_intelligence.py"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = [
  "app/api/routes/customer/price_intelligence.py",
  "app/api/routes/operator/price_intelligence.py",
  "app/integrations/price_intelligence",
  "app/modules/price_intelligence",
  "migrations/versions/20260716_0022_price_intelligence.py",
  "tests/unit/test_price_intelligence.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
  "migrations",
  "app/api/routes/customer/price_intelligence.py",
  "app/api/routes/operator/price_intelligence.py",
  "app/integrations/price_intelligence",
  "app/modules/price_intelligence",
]

[[tool.mypy.overrides]]
module = ["bs4"]
ignore_missing_imports = true
